<resources>
    <string name="app_name">Usg Challenge</string>
    <string name="coins_detail_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dialog_button_ok">Tamam</string>
    <string name="dialog_title">Hata</string>
    <string name="dialog_message">İşleminizi Gerçekleştiremiyoruz. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="hilt_message_search">Ara</string>

    <!-- Menu -->
    <string name="menu_home">Anasayfa</string>
    <string name="menu_favorites">Favoriler</string>

    <!-- Coin Detail -->
    <string name="statistics_title">\'nin İstatistikleri</string>
    <string name="statistics_title_desc">İstatistiklerini gösteren genel bir bakış ....,
baz ve teklif para birimi, rütbe ve işlem hacmi gibi.</string>
    <string name="statistics_price_to_usd">Dolar Karşılığı</string>
    <string name="statistics_price_to_btc">BTC Karşılığı</string>
    <string name="statistics_rank">Sıralaması</string>
    <string name="statistics_24h_volume">24 Saatlik Hacmi</string>
    <string name="statistics_market_cap">Piyasa Değeri</string>
    <string name="favorites_null_message">Favorileriniz boştur</string>

    <!-- Favorites -->
    <string name="favorites_coin_remove_message">silindi.</string>

</resources>